--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,36 @@
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.6.2.post1
-attrs==24.2.0
-blinker==1.9.0
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-distro==1.9.0
-duckdb==1.1.3
-exceptiongroup==1.2.2
-filelock==3.16.1
-fsspec==2024.10.0
-gitdb==4.0.11
-gitpython==3.1.43
-groq==0.13.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.0
-huggingface-hub==0.26.3
+babel==2.17.0
+backrefs==5.8
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+ghp-import==2.1.0
+gitdb==4.0.12
+gitpython==3.1.44
 idna==3.10
-jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-markdown-it-py==3.0.0
+jinja2==3.1.6
+markdown==3.7
 markupsafe==3.0.2
-mdurl==0.1.2
-mpmath==1.3.0
-narwhals==1.15.1
-networkx==3.4.2
-numpy==2.1.3
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-git-authors-plugin==0.9.4
+mkdocs-git-revision-date-localized-plugin==1.4.5
+mkdocs-material==9.6.9
+mkdocs-material-extensions==1.3.1
 packaging==24.2
-pandas==2.2.3
-pillow==11.0.0
-pip==23.0.1
-protobuf==5.29.0
-pyarrow==18.1.0
-pydantic==2.10.2
-pydantic-core==2.27.1
-pydeck==0.9.1
-pygments==2.18.0
+paginate==0.5.7
+pathspec==0.12.1
+platformdirs==4.3.7
+pygments==2.19.1
+pymdown-extensions==10.14.3
 python-dateutil==2.9.0.post0
-pytz==2024.2
+pytz==2025.2
 pyyaml==6.0.2
-referencing==0.35.1
-regex==2024.11.6
+pyyaml-env-tag==0.1
 requests==2.32.3
-rich==13.9.4
-rpds-py==0.21.0
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-sentence-transformers==3.3.1
-setuptools==65.5.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-sqlparse==0.5.2
-streamlit==1.40.2
-sympy==1.13.1
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tokenizers==0.20.3
-toml==0.10.2
-torch==2.5.1
-tornado==6.4.2
-tqdm==4.67.1
-transformers==4.46.3
-typing-extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
+six==1.17.0
+smmap==5.0.2
+-e file:///Users/zkan/Work/zkan/thinking-with-data
+urllib3==2.3.0
+watchdog==6.0.0
